# pripton-skill-pipeline

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CROSSCHECK.md  DESIGN.md  PLAN.md  README.md  RESEARCH.md  STATUS.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
runs/: _stats_snapshot.json  index.html
runs/run_20260528-194700_3f6d8323/: report.html  run_log.json  skill_map.json  skill_map.mmd
runs/run_20260528-194847_4b117608/: report.html  run_log.json  skill_map.json  skill_map.mmd
runs/run_20260528-194952_560b4a65/: report.html  run_log.json  skill_map.json  skill_map.mmd
runs/run_20260528-200910_3f6d8323/: report.html  run_log.json  skill_map.json  skill_map.mmd  topics_for_review.json
samples/: adversarial_prose.md  clean_roadmap.md  messy_tutorial.md
src/skillpipeline/: __main__.py  cache.py  cli.py  extract.py  graph.py  human_review.py  index.py  ingest.py  llm.py  merge.py  models.py  pipeline.py  relate.py  report.py  retry.py  stats.py  validate.py
templates/: index.html.j2  report.html.j2
tests/: conftest.py  test_cache.py  test_cli.py  test_extract.py  test_graph.py  test_groq_client.py  test_groq_response_parsing.py  test_human_review.py  test_index.py  test_ingest.py  test_llm.py  test_merge.py  test_models.py  test_pipeline.py  test_pipeline_e2e.py  test_pipeline_real_graph.py  test_relate.py  test_report.py  test_retry.py  test_stats.py  test_validate.py
tests/fixtures/: extract_response_malformed.json  extract_response_valid.json  relate_response_bad_refs.json  relate_response_valid.json
(+3 files in other folders)
