[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pripton-skill-pipeline"
version = "0.1.0"
description = "A workflow system that extracts structured skill maps from markdown learning documents using LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=0.2",
    "anthropic>=0.40",
    "pydantic>=2",
    "networkx>=3",
    "structlog>=25",
    "rich>=13",
    "jinja2>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1",
]

[project.scripts]
skillpipeline = "skillpipeline.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = true
explicit_package_bases = true
